# unity

./: CMakeLists.txt  README.md  project.yml
src/: CMakeLists.txt  hardware.c  hardware.h  peripheral.c  peripheral.h
src/module_a/: CMakeLists.txt  module_a.c  module_a.h
test/: CMakeLists.txt  suite_1.c  test_assertions.c  test_exception_signal.c  test_exceptions.c  test_extensibility.c  test_fixtures.c  test_hardware.c  test_memory_leaks.c  test_mocking.c
